  integers instead of a string.  Based on patch by Guilherme Polo.

- Issue #10197: Rework subprocess.get[status]output to use subprocess
  functionality and thus to work on Windows. Patch by Nick Coghlan.

- Issue #19286: Directories in ``package_data`` are no longer added to
  the filelist, preventing failure outlined in the ticket.

Tests
-----

- Issue #19588: Fixed tests in test_random that were silently skipped most
  of the time.  Patch by Julian Gindi.

- Issue #19596: Set untestable tests in test_importlib to None to avoid
  reporting success on empty tests.

- Issue #19440: Clean up test_capi by removing an unnecessary __future__
  import, converting from test_main to unittest.main, and running the
  _testcapi module tests within a unittest TestCase.

- Issue #18702: All skipped tests now reported as skipped.

- Issue #19085: Added basic tests for all tkinter widget options.

Documentation
-------------

- Issue #19795: Improved markup of True/False constants.

- Issue #18326: Clarify that list.sort's arguments are keyword-only.  Also,
  attempt to reduce confusion in the glossary by not saying there are
  different "types" of arguments and parameters.

Build
-----

- Issue #19788: kill_python(_d).exe is now run as a PreBuildEvent on the
  pythoncore sub-project.  This should prevent build errors due a previous
  build's python(_d).exe still running.

- Add workaround for VS 2010 nmake clean issue. VS 2010 doesn't set up PATH
  for nmake.exe correctly.


What's New in Python 3.3.3?
===========================

*Release date: 17-Nov-2013*

No changes from release candidate 2.


What's New in Python 3.3.3 release candidate 2?
===============================================

*Release date: 11-Nov-2013*

Library
-------

- Issue #19227: Any re-seeding of the OpenSSL RNG on fork has been removed;
  this should be handled by OpenSSL itself or by the application.

- Issue #19435: Fix directory traversal attack on CGIHttpRequestHandler.

Tests
-----
